Edit: fix too big cards

--- a/custom.css
+++ b/custom.css
@@ -258,8 +258,8 @@ a {
 
 @media (min-width:1200px) {
   .sb-page-portfolio {
-    padding-top: 300px;
-    padding-bottom: 300px;
+    padding-top: 200px;
+    padding-bottom: 200px;
     text-align: left;
     font-size: 30px
     background-position: center;
